Import xterm_337.orig.tar.gz

--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,12 @@
 The NEWS file was generated from xterm.log.html, which serves as the changelog
 for xterm.
 --------------------------------------------------------------------------------
-                            Patch #335 - 2018/08/14
+                            Patch #337 - 2018/09/21
 
-     * add  colorInnerBorder  resource  to  make  a change from patch #334
-       configurable (reports by H Merijn Brand, Gabriele Balducci).
+     * regenerated configure script (report by Sven Joachim).
+     * revise/improve  fix  for  scrolling  in margins (report/analysis by
+       Martin Hostettler):
+     * amend change to default-translations "select" subset to ensure that
+       specific  key-press  actions  are  listed  before generic key-press
+       actions (reports by H Merijn Brand, Sven Joachim).
 
